fixed cards being too close to left hand side. Made dropdown a bit bigger

--- a/src/index.css
+++ b/src/index.css
@@ -51,6 +51,7 @@ main {
 select {
   margin: auto;
   display: flex;
+  padding: 5px;
 }
 
 span {
